--- a/notebooks/district_14.ipynb
+++ b/notebooks/district_14.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samtg\\AppData\\Local\\Temp\\ipykernel_19256\\3046063932.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\samtg\\AppData\\Local\\Temp\\ipykernel_35024\\3046063932.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +93,18 @@
     "    df['ed_total'] = df.groupby('ed_name')['votes'].transform('sum')\n",
     "    df['vote_share'] = round(df['votes'] / df['ed_total'] * 100,2)\n",
     "    df['vote_share'] = pd.to_numeric(df['vote_share'], errors='coerce')\n",
+    "    return df\n",
+    "\n",
+    "def make_ed_name(df):\n",
+    "    df['precinct'] = 'AD: ' + df['AD'].astype(str) + ' ' + 'ED: ' + df['ED'].astype(str).str.zfill(3)\n",
+    "    df['ed_name'] = df['AD'].astype(str) + df['ED'].astype(str).str.zfill(3)\n",
+    "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +117,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cvap = pd.read_csv('../data/cvap.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +143,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidates = ['Randy  D. Abreu','Felix A. Perdomo','Fernando Cabrera' ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_ed_name(df):\n",
+    "    df['precinct'] = 'AD: ' + df['AD'].astype(str) + ' ' + 'ED: ' + df['ED'].astype(str).str.zfill(3)\n",
+    "    df['ed_name'] = df['AD'].astype(str) + df['ED'].astype(str).str.zfill(3)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cab = make_ed_name(cab)\n",
+    "cab = rearrange(cab,candidates)\n",
+    "cab['ed_name'] = cab['ed_name'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cab['ed_name'] = cab['ed_name'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cab_with_cvap = cab.merge(cvap,left_on='ed_name',right_on='ElectDist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps_basics = ps_full[['ed_name','vote_share','total_vote_precinct']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps_basics.columns = ['ed_name','ps_vote','ed_total_2021']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cab_with_cvap.columns = ['precinct','ed_name','candidate','votes','ed_total_2017','fc_vote','ElectDist','cvap']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cab_with_cvap = cab_with_cvap[cab_with_cvap['candidate'] == 'Fernando Cabrera']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "two_year_cvap = cab_with_cvap[['ed_name','ed_total_2017','fc_vote','cvap']].merge(ps_basics,on='ed_name',how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "denom2017 = two_year_cvap['ed_total_2017']\n",
+    "two_year_cvap['share_2017'] = np.where(denom2017 == 0,\n",
+    "                                       np.nan,\n",
+    "                                       two_year_cvap['cvap'] / denom2017)\n",
+    "\n",
+    "denom2021 = two_year_cvap['ed_total_2021']\n",
+    "two_year_cvap['share_2021'] = np.where(denom2021 == 0,\n",
+    "                                       np.nan,\n",
+    "                                       two_year_cvap['cvap'] / denom2021)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "two_year_cvap['diff'] = two_year_cvap['share_2021'] - two_year_cvap['share_2017']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -152,269 +289,159 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AD</th>\n",
-       "      <th>ED</th>\n",
-       "      <th>County</th>\n",
-       "      <th>EDAD Status</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>Party/Independent Body</th>\n",
-       "      <th>Office/Position Title</th>\n",
-       "      <th>District Key</th>\n",
-       "      <th>VoteFor</th>\n",
-       "      <th>Unit Name</th>\n",
-       "      <th>Tally</th>\n",
+       "      <th>fc_vote</th>\n",
+       "      <th>ps_vote</th>\n",
+       "      <th>share_2017</th>\n",
+       "      <th>share_2021</th>\n",
+       "      <th>diff</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Public Counter</td>\n",
-       "      <td>67</td>\n",
+       "      <th>fc_vote</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.241240</td>\n",
+       "      <td>-0.003558</td>\n",
+       "      <td>-0.125304</td>\n",
+       "      <td>-0.106622</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Manually Counted Emergency</td>\n",
-       "      <td>0</td>\n",
+       "      <th>ps_vote</th>\n",
+       "      <td>-0.241240</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.158851</td>\n",
+       "      <td>0.138494</td>\n",
+       "      <td>-0.138230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Absentee / Military</td>\n",
-       "      <td>4</td>\n",
+       "      <th>share_2017</th>\n",
+       "      <td>-0.003558</td>\n",
+       "      <td>0.158851</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.855208</td>\n",
+       "      <td>-0.885131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Affidavit</td>\n",
-       "      <td>1</td>\n",
+       "      <th>share_2021</th>\n",
+       "      <td>-0.125304</td>\n",
+       "      <td>0.138494</td>\n",
+       "      <td>0.855208</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.515791</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Randy  D. Abreu</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Felix A. Perdomo</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Fernando Cabrera</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>77</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Public Counter</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>77</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Manually Counted Emergency</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>77</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>IN-PLAY</td>\n",
-       "      <td>Primary Election - 09/12/2017</td>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Member of the City Council</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Absentee / Military</td>\n",
-       "      <td>1</td>\n",
+       "      <th>diff</th>\n",
+       "      <td>-0.106622</td>\n",
+       "      <td>-0.138230</td>\n",
+       "      <td>-0.885131</td>\n",
+       "      <td>-0.515791</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   AD  ED County EDAD Status                          Event  \\\n",
-       "0  77  12  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "1  77  12  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "2  77  12  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "3  77  12  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "4  77  12  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "5  77  12  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "6  77  12  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "7  77  13  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "8  77  13  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "9  77  13  Bronx     IN-PLAY  Primary Election - 09/12/2017   \n",
-       "\n",
-       "  Party/Independent Body       Office/Position Title  District Key  VoteFor  \\\n",
-       "0             Democratic  Member of the City Council            14        1   \n",
-       "1             Democratic  Member of the City Council            14        1   \n",
-       "2             Democratic  Member of the City Council            14        1   \n",
-       "3             Democratic  Member of the City Council            14        1   \n",
-       "4             Democratic  Member of the City Council            14        1   \n",
-       "5             Democratic  Member of the City Council            14        1   \n",
-       "6             Democratic  Member of the City Council            14        1   \n",
-       "7             Democratic  Member of the City Council            14        1   \n",
-       "8             Democratic  Member of the City Council            14        1   \n",
-       "9             Democratic  Member of the City Council            14        1   \n",
-       "\n",
-       "                    Unit Name  Tally  \n",
-       "0              Public Counter     67  \n",
-       "1  Manually Counted Emergency      0  \n",
-       "2         Absentee / Military      4  \n",
-       "3                   Affidavit      1  \n",
-       "4             Randy  D. Abreu     18  \n",
-       "5            Felix A. Perdomo     15  \n",
-       "6            Fernando Cabrera     36  \n",
-       "7              Public Counter    100  \n",
-       "8  Manually Counted Emergency      0  \n",
-       "9         Absentee / Military      1  "
+       "             fc_vote   ps_vote  share_2017  share_2021      diff\n",
+       "fc_vote     1.000000 -0.241240   -0.003558   -0.125304 -0.106622\n",
+       "ps_vote    -0.241240  1.000000    0.158851    0.138494 -0.138230\n",
+       "share_2017 -0.003558  0.158851    1.000000    0.855208 -0.885131\n",
+       "share_2021 -0.125304  0.138494    0.855208    1.000000 -0.515791\n",
+       "diff       -0.106622 -0.138230   -0.885131   -0.515791  1.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cab.head(10)"
+    "two_year_cvap[['fc_vote','ps_vote','share_2017','share_2021','diff']].corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "candidates = ['Randy  D. Abreu','Felix A. Perdomo','Fernando Cabrera' ]"
+    "two_year_cvap['increase'] = np.where(two_year_cvap['diff'] > 0, 'yes', 'no')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fc_vote</th>\n",
+       "      <th>ps_vote</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>increase</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>no</th>\n",
+       "      <td>56.437176</td>\n",
+       "      <td>36.732119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yes</th>\n",
+       "      <td>48.305000</td>\n",
+       "      <td>38.760059</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            fc_vote    ps_vote\n",
+       "increase                      \n",
+       "no        56.437176  36.732119\n",
+       "yes       48.305000  38.760059"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def make_ed_name(df):\n",
-    "    df['precinct'] = 'AD: ' + df['AD'].astype(str) + ' ' + 'ED: ' + df['ED'].astype(str).str.zfill(3)\n",
-    "    df['ed_name'] = df['AD'].astype(str) + df['ED'].astype(str).str.zfill(3)\n",
-    "\n",
-    "    return df"
+    "two_year_cvap['increase'] = np.where(two_year_cvap['diff'] > 0, 'yes', 'no')\n",
+    "two_year_cvap.groupby('increase')[['fc_vote','ps_vote']].agg('mean')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cab = make_ed_name(cab)\n",
-    "cab = rearrange(cab,candidates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cab = cab[cab['candidate'] == 'Fernando Cabrera']\n",
-    "cab = cab[['ed_name','vote_share']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cab.columns = ['ElectDist','cab_vs']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cab['ElectDist'] = cab['ElectDist'].astype('Int64')"
+    "two_year_cvap.dropna(inplace=True)"
    ]
   },
   {
@@ -3555,6 +3582,22 @@
    "source": [
     "F_reduced = F[:, keep_idx]\n",
     "F_reduced = sm.add_constant(F_reduced)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Donation Ethnicity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ethnicolr import pred_census_ln, pred_wiki_name"
    ]
   }
  ],
