--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -409,3 +409,22 @@
 	month = {10},
 	date = {2020-10}
 }
+
+@misc{coltin2021,
+	title = {A Q&A with New York City Council Member-elect Linda Lee},
+	author = {Coltin, Jeff},
+	year = {2021},
+	month = {11},
+	date = {2021-11-04},
+	url = {https://www.cityandstateny.com/personality/2021/11/q-new-york-city-council-member-elect-linda-lee/186612/},
+	langid = {en}
+}
+
+@misc{thisis2021,
+	title = {This is bitterly disappointing. I was honored to have the overwhelming support of the WFP{\textquoteright}s Queens chapter and it stings to see their vote overturned by the party{\textquoteright}s regional affiliates. It is painfully clear that the political machine is alive and well.},
+	year = {2021},
+	month = {02},
+	date = {2021-02-25},
+	url = {https://x.com/juliej_won/status/1365048685206323200},
+	langid = {en}
+}
